[package]
name = "reliquary_encryptor"
version = "0.1.0"
edition = "2021"

[lib]
name = "reliquary_encryptor"
crate-type = ["cdylib"]      # Required for Python FFI

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
# AES-GCM for symmetric encryption
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand_core = { version = "0.9.3", optional = true }
rand = "0.8"
generic-array = "0.14.7"
typenum = "1.18.0"
# Post-quantum cryptography
pqcrypto-kyber = "0.8.0"  # Kyber KEM
pqcrypto-falcon = "0.3.0" # Falcon signatures
pqcrypto-traits = "0.3.5" # Common traits
# Additional cryptographic utilities
hex = "0.4"
zeroize = "1.6" # For secure memory zeroing


[dependencies.getrandom]
version = "0.2"
optional = true

[features]
default = ["rand_core", "getrandom"]

[package.metadata.pyo3]
name = "reliquary_encryptor"
