[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reliquary-sdk"
description = "Enterprise Python SDK for ReliQuary multi-agent consensus platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ReliQuary Team", email = "support@reliquary.io" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.8.0", "typing_extensions>=4.0.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=5.0.0"]

[project.urls]
Homepage = "https://github.com/reliquary/sdk-python"
Documentation = "https://docs.reliquary.io/sdk/python"
Repository = "https://github.com/reliquary/sdk-python"
"Bug Tracker" = "https://github.com/reliquary/sdk-python/issues"

[tool.setuptools_scm]
